--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
                 <nav class="nav justify-content-center  ">
                     <a class="nav-link" href="Spaces.html">Spaces</a>
                     <a class="nav-link" href="CreateSpaces.html">Create Spaces</a>
+                    <a class="nav-link" href="import.html">Imports / Exports</a>
+                    <a class="nav-link" href="AppCenter.html">App Center</a>
+                    <a class="nav-link" href="trash.html">Trash</a>
+                    <a class="nav-link" href="MySetting.html">My Settings</a>
+                    <a class="nav-link" href="MyWorkSpace.html">My Workspaces</a>
+                    <a class="nav-link" href="NotificationSetting.html">Notifications</a>
                 </nav>
              </div>
         </div>
